--- a/FishClient/FishClient.csproj
+++ b/FishClient/FishClient.csproj
@@ -9,6 +9,9 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.10.0" />
+      <PackageReference Include="Tesseract" Version="5.2.0" />
+      <PackageReference Include="Tesseract.Data.English" Version="4.0.0" />
+      <PackageReference Include="Tesseract.Drawing" Version="5.2.0" />
     </ItemGroup>
 
 </Project>
